src/objects/Client_Reminder__c.object
<CustomObject>
    <description>For use with Clientel or other reminder needs</description>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_First_Name__c</fullName>
        <description>Will pull client&apos;s firstname from contact. Use this field if name on contact is not appropriate</description>
        <inlineHelpText>Only add  a name here if you do NOT want to use the name on contact page for client.</inlineHelpText>
        <label>Alternate First Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Language__c</fullName>
        <description>Not same picklist as Primary Language. Limited languages available.</description>
        <inlineHelpText>Not same picklist as Primary Language. Limited languages available.</inlineHelpText>
        <label>Alternate Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Last_Name__c</fullName>
        <description>If not using last name on contact</description>
        <inlineHelpText>Only fill in this field if you do NOT want to use last name on Contact page</inlineHelpText>
        <label>Alternate Last Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Number__c</fullName>
        <description>to use phone number other than what is on contact page</description>
        <inlineHelpText>Only fill in this field if NOT using cell phone on Contact page</inlineHelpText>
        <label>Alternate Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_email__c</fullName>
        <description>If not using client&apos;s email on contact page</description>
        <inlineHelpText>only fill in if NOT using client&apos;s email on Contact page</inlineHelpText>
        <label>Alternate email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Cell_Phone__c</fullName>
        <formula>Contact__r.Client_Cell_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Language__c</fullName>
        <description>Primary Language from contact</description>
        <formula>Text(Contact__r.Primary_Language__c)</formula>
        <label>Contact Primary Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Master/child</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Reminders</relationshipLabel>
        <relationshipName>Client_Reminders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstName_RPT__c</fullName>
        <description>Use contact first name unless alternate exists</description>
        <formula>if(isblank( Alternate_First_Name__c) , Contact_First_Name__c ,Alternate_First_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this field for reports</inlineHelpText>
        <label>FirstName_RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_RPT__c</fullName>
        <description>Clienttel reports this field</description>
        <formula>IF(NOT(ISBLANK( text(Alternate_Language__c))),text(Alternate_Language__c),Contact_Primary_Language__c)</formula>
        <inlineHelpText>For ClientTell report</inlineHelpText>
        <label>Language RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Reminder_Call__c</fullName>
        <description>upload from clienttel</description>
        <label>Last Reminder Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Response__c</fullName>
        <description>response from reminder.</description>
        <inlineHelpText>Clienttel will send back a report with values for response (e..g. number disconnected, no answer, answered, etc.).</inlineHelpText>
        <label>Last Response</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname_RPT__c</fullName>
        <description>if no alternate last name, use contact last name, else use alternate lastname field</description>
        <formula>if(isblank( Alternate_Last_Name__c ), Contact_Last_Name__c , Alternate_Last_Name__c )</formula>
        <inlineHelpText>ClientTell report</inlineHelpText>
        <label>Lastname RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <defaultValue>&quot;Text; Voice&quot;</defaultValue>
        <description>Default is Text message, check with Giles</description>
        <inlineHelpText>only use N/A if NOT for clienttell (automated call reminder</inlineHelpText>
        <label>Message Type</label>
        <picklist>
            <picklistValues>
                <fullName>email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phone_Number_RPT__c</fullName>
        <formula>if(isblank( Alternate_Phone_Number__c ), Contact_Cell_Phone__c ,Alternate_Phone_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Type__c</fullName>
        <description>In case want to use for other things besides csv file for ClientTell</description>
        <label>Reminder Type</label>
        <picklist>
            <picklistValues>
                <fullName>ClientTell</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Front Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Short_Note__c</fullName>
        <inlineHelpText>Think twitter - 254 characters!</inlineHelpText>
        <label>Short Note</label>
        <type>TextArea</type>
    </fields>
    <label>Client Reminder</label>
    <nameField>
        <displayFormat>CRE-{0}</displayFormat>
        <label>Client Reminder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Reminders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>